# z3-upb-pres

./: .gitignore  CMakeLists.txt  README.md
pretty_simple_precondition/: CMakeLists.txt  main.cpp
routing_table/: CMakeLists.txt  main.cpp  rtex.txt
sudoku/: CMakeLists.txt  main.cpp  ref.txt
timetable/: CMakeLists.txt  entities.cpp  entities.h  example.txt  main.cpp
